--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button id="rock" onclick="rock()">Rock</button>
+    <button id="paper" onclick="paper()">Paper</button>
+    <button id="scissors" onclick="scissors()">Scissors</button>
     
 </body>
 <script src="script.js"></script>
