--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body id="container">
 
     <button id="rock" onclick="rock()">Rock</button>
     <button id="paper" onclick="paper()">Paper</button>
