Logic created to end game when someone reaches a score of 5 and disables buttons when finished

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body id="container">
 
-    <button id="rock" onclick="rock()">Rock</button>
-    <button id="paper" onclick="paper()">Paper</button>
-    <button id="scissors" onclick="scissors()">Scissors</button>
+    <button class="rock" onclick="rock()">Rock</button>
+    <button class="paper" onclick="paper()">Paper</button>
+    <button class="scissors" onclick="scissors()">Scissors</button>
     
 </body>
 <script src="script.js"></script>
