Finalize UI design
added little qol fixes to UI design

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body id="container">
+    <div class="body">
+        <div class="buttons">
+            <button class="rock" onclick="rock()">Rock</button>
+            <button class="paper" onclick="paper()">Paper</button>
+            <button class="scissors" onclick="scissors()">Scissors</button>
+    </div>
 
-    <button class="rock" onclick="rock()">Rock</button>
-    <button class="paper" onclick="paper()">Paper</button>
-    <button class="scissors" onclick="scissors()">Scissors</button>
-    
 </body>
 <script src="script.js"></script>
 </html>
